Fix grid alignment

--- a/style.css
+++ b/style.css
@@ -1346,6 +1346,7 @@ a:hover, a:focus {
 #split-page > #wrapper > .body {
   grid-area: post-content;
   display: block;
+  align-self: start;
 }
 
 #split-page > #wrapper > .body > figure {
